# eCom-test

./: Dockerfile  LICENSE  Makefile  README.md  Readme.md  docker-compose.yml  pyproject.toml
api/: __init__.py  app.py  bd_insert.py  test.py
