[tool.poetry]
name = "web-app-ecom"
version = "0.1.0"
description = ""
authors = ["KatanaNevermore <grenkachannel@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-pymongo = "^2.3.0"
pymongo = "^4.6.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
